<resources>
    <string name="app_name">test3</string>
    <string name="pw">PW</string>
    <string name="id">ID</string>
    <string name="logInButton">로그인</string>
    <string name="registerButton">회원가입</string>
    <string name="logInPicture">TODO</string>
    <string name="hellgi_project">Hellgi_Project</string>
    <string name="Name">Name</string>
    <string name="UserPW">PW</string>
    <string name="UserID">ID</string>
    <string name="name">Name</string>
    <string name="비밀번호">비밀번호</string>
    <string name="아이디">아이디</string>
    <string name="등록">등록</string>
    <string name="이름힌트">이름</string>
    <string name="회원가입텍스트">회 원 가 입</string>
    <string name="check">check</string>
    <string name="textcheck">textCheck</string>
</resources>