<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/HellgiProject"
        android:layout_width="179dp"
        android:layout_height="62dp"
        android:text="@string/회원가입텍스트"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/UserEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/UserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserID"
        app:layout_constraintBaseline_toBaselineOf="@+id/UserEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/UserEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/UserPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserPW"
        app:layout_constraintBottom_toTopOf="@+id/UserName"
        app:layout_constraintEnd_toStartOf="@+id/UserPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserID"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/PersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserID"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/UserEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/아이디"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/UserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/비밀번호"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/PersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserEmailAddress"
        app:layout_constraintVertical_bias="0.492"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/PersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/이름힌트"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserEmailAddress"
        app:layout_constraintVertical_bias="0.49"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:id="@+id/registerCompliteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/등록"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/validateButton"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:text="중복확인"
        app:layout_constraintBottom_toBottomOf="@+id/UserEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@+id/UserEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/UserEmailAddress" />
</androidx.constraintlayout.widget.ConstraintLayout>